Fixed navbar link alignment and added max-width for skill & tools

--- a/style-sections.css
+++ b/style-sections.css
@@ -87,6 +87,7 @@
 .skills-tools__subsection.titled-grid-row {
 	margin-bottom: .25rem;
 	min-width: 38rem;
+	max-width: 100vw;
 }
 
 .skills-tools__subsections-container {
